--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.3.0-beta.2",
+    "axios": "^0.27.2",
     "pinia": "^2.0.16",
     "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.1.2"
   },
   "devDependencies": {
