--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
     "ant-design-vue": "^3.3.0-beta.2",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.4",
+    "moment": "^2.29.4",
     "pinia": "^2.0.16",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
