--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "ant-design-vue": "^3.3.0-beta.2",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "pinia": "^2.0.16",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.1.2"
+    "vue-router": "^4.1.2",
+    "vue-toast-notification": "^0.6.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
