--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.0.16",
     "vee-validate": "^4.6.2",
     "vue": "^3.2.37",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.1.2",
     "yup": "^0.32.11"
   },
