--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "ant-design-vue": "^3.3.0-beta.2",
     "axios": "^0.27.2",
-    "pinia": "^2.0.16",
+    "date-fns": "^2.29.1",
+    "pinia": "^2.0.18",
     "vue": "^3.2.37",
     "vue-axios": "^3.4.1",
     "vue-router": "^4.1.2"
